--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Starter Template for Bootstrap</title>
+    <title>MyAppName: Photo Sharing App</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
 
 </head>
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -23,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand em-text" href="#">MyAppName</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -35,10 +36,62 @@
     </div>
 </nav>
 
-<section>
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <h1>Capture <span class="em-text">Life</span></h1>
+                <p>
+                    A fun and easy way to capture & share the moments you live for
+                </p>
+                <a hre="#"><img class="app-btn" src="img/icon-app-store.svg"/></a>
+                <a hre="#"><img class="app-btn" src="img/icon-google-play.png"/></a>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <img class="showcase-img" src="img/demo-1.png"/>
+            </div>
+        </div>
+    </div>
+</div>
 
+<section id="middle">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <img class="demo" src="img/demo-1.png"/>
+                <h2>Lorem Ipsum</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
+                </p>
+                <a class="btn btn-default" href="#">Read More</a>
+            </div>
+            <div class="col-md-4">
+                <img class="demo" src="img/demo-1.png"/>
+                <h2>Lorem Ipsum</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
+                </p>
+                <a class="btn btn-default" href="#">Read More</a>
+            </div>
+            <div class="col-md-4">
+                <img class="demo" src="img/demo-1.png"/>
+                <h2>Lorem Ipsum</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
+                </p>
+                <a class="btn btn-default" href="#">Read More</a>
+            </div>
+        </div>
+    </div>
 </section>
 
+<section id="feature">
+    <div class="container">
+        <div class="row">
+            
+        </div>
+    </div>
+</section>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
