Add Features and Footer

--- a/index.html
+++ b/index.html
@@ -88,10 +88,40 @@
 <section id="feature">
     <div class="container">
         <div class="row">
-            
+            <div class="col-md-5">
+                <h1>MyAppName Features</h1>
+                <ul>
+                    <li><i class="glyphicon glyphicon-ok"></i>Pellentesque ex magna</li>
+                    <li><i class="glyphicon glyphicon-ok"></i>Donec sagittis eu sem in accumsan</li>
+                    <li><i class="glyphicon glyphicon-ok"></i>Sed sagittis ornare gravida</li>
+                    <li><i class="glyphicon glyphicon-ok"></i>Cum sociis natoque penatibus</li>
+                    <li><i class="glyphicon glyphicon-ok"></i>Vivamus eget lectus eros</li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-md-offset-2">
+                <img class="big-logo" src="img/logo.png"/>
+            </div>
         </div>
     </div>
 </section>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <p>Copyright &copy; 2015, All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+</footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
