--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>MyAppName: Photo Sharing App</title>
+    <title>MyAppName: Contact</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
@@ -28,78 +28,55 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 
-<div class="jumbotron">
+<section id="title-bar">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <h1>Capture <span class="em-text">Life</span></h1>
-                <p>
-                    A fun and easy way to capture & share the moments you live for
-                </p>
-                <a hre="#"><img class="app-btn" src="img/icon-app-store.svg"/></a>
-                <a hre="#"><img class="app-btn" src="img/icon-google-play.png"/></a>
-            </div>
-            <div class="col-md-6 col-xs-12">
-                <img class="showcase-img" src="img/demo-1.png"/>
-            </div>
-        </div>
-    </div>
-</div>
-
-<section id="middle">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <img class="demo" src="img/demo-1.png"/>
-                <h2>Lorem Ipsum</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
-                </p>
-                <a class="btn btn-default" href="#">Read More</a>
-            </div>
-            <div class="col-md-4">
-                <img class="demo" src="img/demo-1.png"/>
-                <h2>Lorem Ipsum</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
-                </p>
-                <a class="btn btn-default" href="#">Read More</a>
-            </div>
-            <div class="col-md-4">
-                <img class="demo" src="img/demo-1.png"/>
-                <h2>Lorem Ipsum</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
-                </p>
-                <a class="btn btn-default" href="#">Read More</a>
+            <div class="col-md-12">
+                <h1>Contact MyAppName</h1>
             </div>
         </div>
     </div>
 </section>
 
-<section id="feature">
+<section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
-                <h1>MyAppName Features</h1>
-                <ul>
-                    <li><i class="glyphicon glyphicon-ok"></i>Pellentesque ex magna</li>
-                    <li><i class="glyphicon glyphicon-ok"></i>Donec sagittis eu sem in accumsan</li>
-                    <li><i class="glyphicon glyphicon-ok"></i>Sed sagittis ornare gravida</li>
-                    <li><i class="glyphicon glyphicon-ok"></i>Cum sociis natoque penatibus</li>
-                    <li><i class="glyphicon glyphicon-ok"></i>Vivamus eget lectus eros</li>
-                </ul>
+            <div class="col-md-8">
+                <form>
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" class="form-control" placeholder="Enter Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Company Name</label>
+                        <input type="text" class="form-control" placeholder="Enter Company Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Email address</label>
+                        <input type="email" class="form-control" placeholder="Enter Email">
+                    </div>
+                    <div class="form-group">
+                        <label>Message</label>
+                        <textarea class="form-control" placeholder="Enter Message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
             </div>
-            <div class="col-md-4 col-md-offset-2">
-                <img class="big-logo" src="img/logo.png"/>
+            <div class="col-md-4">
+                <img class="demo" src="img/demo-1.png"/>
+                <h2>Lorem Ipsum</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis congue erat. Maecenas in tortor vel erat ornare imperdiet.
+                </p>
+                <a class="btn btn-default" href="#">Read More</a>
             </div>
         </div>
     </div>
