--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -93,7 +93,7 @@
                     <li><a href="#">Privacy Policy</a></li>
                 </ul>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
                 <p>Copyright &copy; 2015, All Rights Reserved</p>
             </div>
         </div>
